k3s/home/tvheadend/tvheadend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvheadend
  namespace: tvheadend
  labels:
    app: tvheadend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvheadend
  template:
    metadata:
      labels:
        app: tvheadend
        name: tvheadend
    spec:
      containers:
      - name: tvheadend
        image: linuxserver/tvheadend:aaca05cc-ls86
        imagePullPolicy: Always
        volumeMounts:
        - name: tvheadend-config-volume
          mountPath: "/config"
        - name: tvheadend-recordings-volume
          mountPath: "/recordings"
        - name: dev-dvb
          mountPath: "/dev/dvb"
        securityContext:
          privileged: true
      volumes:
      - name: tvheadend-config-volume
        persistentVolumeClaim:
          claimName: tvheadend-config
      - name: tvheadend-recordings-volume
        persistentVolumeClaim:
          claimName: tvheadend-recordings
      - name: dev-dvb
        hostPath:
          path: /dev/dvb

---
apiVersion: v1
kind: Service
metadata:
  name: tvheadend
  namespace: tvheadend
  labels:
    app: tvheadend
spec:
  selector:
    app: tvheadend
  ports:
  - port: 9981
    targetPort: 9981
    name: tvheadend-admin
  - port: 9982
    targetPort: 9982
    name: tvheadend-htsp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tvheadend-ingress
  namespace: tvheadend
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: tvheadend
spec:
  rules:
  - host: tvheadend-admin.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tvheadend
            port:
              number: 9981
  - host: tvheadend-htsp.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tvheadend
            port:
              number: 9982
